--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash.isempty": "^4.4.0",
     "moment": "^2.22.2",
     "react": "^16.4.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
