--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.4.2",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.2",
+    "react-fade-in": "^0.1.6",
     "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
