--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+that-song.com.csr
+that-song.com.key
 
 npm-debug.log*
 yarn-debug.log*
