--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-soundcloud-embed": "^1.0.3",
+    "react-soundcloud-widget": "^2.0.4",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
